Fix nested UL spacing. 292d3a0e657139432d3cb4612651b2a314a2ec07

--- a/assets/styles/common.css
+++ b/assets/styles/common.css
@@ -1785,6 +1785,11 @@ body > main > article ul ul ul {
 	list-style-type: "+";
 }
 
+body > main > article ul > li > ul:only-child,
+body > main > article ul > li > *:not(h3):not(h4):not(p) ~ ul {
+	margin-top: calc(-1 * var(--typography--margin--top));
+}
+
 body > main > article ol {
 	counter-reset: list;
 }
